--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         }
     ],
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "funct/funct": "^1.5",
+        "symfony/yaml": "^4.3"
     }
     ,
     "require-dev": {
@@ -19,13 +21,20 @@
             "app\\": "src/"
         },
         "files": [
-            "src/Cli.php"
+            "src/genDiff.php",
+            "src/parsers.php",
+            "src/astBuilder.php",
+            "src/formatters/plain.php",
+            "src/formatters/pretty.php",
+            "src/formatters/json.php"
         ]
     },
     "bin": [
         "bin/gendiff"
     ],
     "scripts": {
-        "phpcs": "phpcs"
+        "phpcs": "phpcs",
+        "phpunit": "phpunit",
+        "test": "phpunit tests"
     }
 }
