--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,13 @@
     }
     ,
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
+        "roave/security-advisories": "dev-latest",
+        "phpunit/phpunit": "^8.3"
     },
     "autoload": {
         "psr-4": {
-            "app\\": "src/"
+            "App\\": "src/",
+            "App\\Tests\\": "tests/"
         },
         "files": [
             "src/genDiff.php",
